force-app/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>Operational error and audit log for automations and integrations.</description>
    <label>Error Log</label>
    <nameField><displayFormat>LOG-{00000}</displayFormat><label>Log #</label><type>AutoNumber</type></nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>