force-app/main/default/objects/Error_Log__c/fields/Apex_Class_Name__c.field-meta.xml
<CustomField><fullName>Apex_Class_Name__c</fullName><description>Apex class name related to this log entry.</description><inlineHelpText>Optional class name for debugging.</inlineHelpText><label>Apex Class Name</label><length>255</length><required>false</required><type>Text</type><unique>false</unique></CustomField>