force-app/main/default/objects/Error_Log__c/fields/Log_Date_Time__c.field-meta.xml
<CustomField><fullName>Log_Date_Time__c</fullName><description>Date/time when the error or audit event occurred.</description><inlineHelpText>Set automatically by logging utilities.</inlineHelpText><label>Log Date/Time</label><required>false</required><type>DateTime</type></CustomField>