force-app/main/default/objects/Error_Log__c/fields/Log_Details__c.field-meta.xml
<CustomField><fullName>Log_Details__c</fullName><description>Complete stack trace or audit details.</description><inlineHelpText>Stores diagnostic details for support and operations.</inlineHelpText><label>Log Details</label><length>32768</length><required>false</required><type>LongTextArea</type><visibleLines>8</visibleLines></CustomField>