force-app/main/default/objects/Error_Log__c/fields/Process_Name__c.field-meta.xml
<CustomField><fullName>Process_Name__c</fullName><description>Name of the automation, trigger, or integration process.</description><inlineHelpText>Use a stable process name for filtering logs.</inlineHelpText><label>Process Name</label><length>255</length><required>false</required><type>Text</type><unique>false</unique></CustomField>